Fix crash exiting all tabs at the same time

It was emitting a signal with a nullptr and updating an icon of a
nullptr as the TerminalDisplay was already deleted.

BUG: 431827
FIXED-IN: 20.12.2
(cherry picked from commit acaabffd992c9bb8799501200121429925f51210)